--- a/octgnFX/Octgn/Properties/Resources.resx
+++ b/octgnFX/Octgn/Properties/Resources.resx
@@ -140,4 +140,7 @@
   <data name="doorclose" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\doorclose.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="PythonSyntax" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\python.xshd;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
